[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solacc"
version = "0.1.0"
description = "Databricks Solution Accelerator notebook companion"
authors = [
  {name = "Nicole Lu", email = "nicole@databricks.com"},
]

license = {text = "Databricks License"}
dependencies = [
    "databricks-sdk",
    "hashlib",
    "json",
    "re",
    "time",
    "copy",
    "dbacademy @ git+https://github.com/databricks-academy/dbacademy/archive/refs/tags/v1.0.13.zip",
]